--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "swiper": "^5.4.5",
     "vue": "2.6.10",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-baidu-map": "^0.21.22",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
