--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "swiper": "^5.4.5",
+    "vant": "^2.9.0",
     "vue": "2.6.10",
     "vue-awesome-swiper": "^4.1.1",
     "vue-baidu-map": "^0.21.22",
