--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "swiper": "^5.4.5",
     "vant": "^2.9.0",
     "vue": "2.6.10",
+    "vue-animate-number": "^0.4.2",
     "vue-awesome-swiper": "^4.1.1",
     "vue-baidu-map": "^0.21.22",
     "vue-router": "3.0.6",
