--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "parallax-js": "^3.1.0",
     "path-to-regexp": "2.4.0",
     "swiper": "^5.4.5",
     "vant": "^2.9.0",
