--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nprogress": "0.2.0",
     "parallax-js": "^3.1.0",
     "path-to-regexp": "2.4.0",
+    "scrollreveal": "^4.0.6",
     "swiper": "^5.4.5",
     "vant": "^2.9.0",
     "vue": "2.6.10",
