--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,8 @@ ENV = 'development'
 
 # base api
 #VUE_APP_BASE_API = '/dev-api'
-VUE_APP_BASE_API = 'http://39.98.80.223:8084'
+#VUE_APP_BASE_API = 'http://39.98.80.223:8084'
+VUE_APP_BASE_API = 'https://www.runfeelmach.com'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
