--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://39.98.80.223:8084'
+#VUE_APP_BASE_API = 'http://39.98.80.223:8084'
+VUE_APP_BASE_API = 'https://www.runfeelmach.com'
 
